<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Mohamed Alaa
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_nav"
    app:startDestination="@id/login_dest">
    <!--
    A dynamic start destination would be better but rubric explicitly specified that a startDestination
    attribute has to be defined in the @navigation.xml file isa.
    -> dynamic start destination
    means this xml file would have no start destination and in the activity onCreate we set
    the start destination according to if the user is logged in or not isa.
    -->

    <fragment
        android:id="@+id/login_dest"
        android:name="com.maproductions.mohamedalaa.shoestore.view.LoginFragment"
        android:label="@string/user_credentials" >
        <action
            android:id="@+id/action_login_dest_to_welcome_dest"
            app:destination="@id/welcome_dest"
            app:popUpTo="@id/login_dest"
            app:popUpToInclusive="true"

            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/welcome_dest"
        android:name="com.maproductions.mohamedalaa.shoestore.view.WelcomeFragment"
        android:label="@string/welcome" >
        <argument
            android:name="userEMail"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/instructions_dest"
        android:name="com.maproductions.mohamedalaa.shoestore.view.InstructionsFragment"
        android:label="@string/instructions" />
    <fragment
        android:id="@+id/shoe_list_dest"
        android:name="com.maproductions.mohamedalaa.shoestore.view.ShoeListFragment"
        android:label="@string/shoes_list" >
        <action
            android:id="@+id/action_shoe_list_dest_to_shoe_detail_dest"
            app:destination="@id/shoe_detail_dest"

            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_shoe_list_dest_to_about_dest"
            app:destination="@id/about_dest"

            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/shoe_detail_dest"
        android:name="com.maproductions.mohamedalaa.shoestore.view.ShoeDetailFragment"
        android:label="@string/details" >
        <argument
            android:name="shoeId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="shoeName"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
        <argument
            android:name="shoeCompany"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true"  />
        <argument
            android:name="shoeSize"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true"  />
        <argument
            android:name="shoeDescription"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true"  />
    </fragment>
    <action
        android:id="@+id/action_global_instructions_dest"
        app:destination="@id/instructions_dest"
        app:enterAnim="@anim/slide_in_right"

        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"
        app:popUpTo="@+id/main_nav"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_global_shoe_list_dest"
        app:destination="@id/shoe_list_dest"
        app:enterAnim="@anim/slide_in_right"

        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"
        app:popUpTo="@+id/main_nav"
        app:popUpToInclusive="true" />
    <!-- Note chang of animation to make the user feels that this is step is a back step in the app flow isa. -->
    <action
        android:id="@+id/action_global_login_dest"
        app:destination="@id/login_dest"
        app:enterAnim="@anim/slide_in_left"

        app:exitAnim="@anim/slide_out_right"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"
        app:popUpTo="@+id/main_nav"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/about_dest"
        android:name="com.maproductions.mohamedalaa.shoestore.view.AboutFragment"
        android:label="@string/about" />
</navigation>