<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Mohamed Alaa
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.maproductions.mohamedalaa.shoestore.view_model.ChangePasswordViewModel"/>

        <variable
            name="viewModel"
            type="com.maproductions.mohamedalaa.shoestore.view_model.ChangePasswordViewModel" />
    </data>

    <!--
    ConstraintLayout is used here to avoid the nested LinearLayout
    to display the buttons if used a LinearLayout.
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:paddingBottom="8dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:title="@string/change_password"

            app:subtitle="@{viewModel.toolbarSubtitle}"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentPasswordTextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            android:hint="@string/current_password"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"

            app:counterEnabled="true"
            app:counterMaxLength="20"

            android:textInputLayout_errorEnabledOtherwiseHelperEnabled="@{!viewModel.isValidCurrentPassword()}"

            android:textInputLayout_errorText="@{@string/length_range_must_be_8_20}"

            app:helperText="@string/required_length_range_8_20"

            app:endIconMode="password_toggle"

            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                tools:text="example@gmail.com"
                android:text="@={viewModel.currentPassword}"

                android:afterTextChanged="@{(e) -> viewModel.setValid(ChangePasswordViewModel.STATE_IS_VALID_CURRENT_PASSWORD)}"

                android:maxLength="20"
                android:maxLines="1"

                android:imeOptions="flagNoExtractUi|actionDone"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordTextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            android:hint="@string/new_password"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"

            app:counterEnabled="true"
            app:counterMaxLength="20"

            android:textInputLayout_errorEnabledOtherwiseHelperEnabled="@{!viewModel.isValidNewPassword()}"

            android:textInputLayout_errorText="@{@string/length_range_must_be_8_20}"

            app:helperText="@string/required_length_range_8_20"

            app:endIconMode="password_toggle"

            app:layout_constraintTop_toBottomOf="@id/currentPasswordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                tools:text="example@gmail.com"
                android:text="@={viewModel.newPassword}"

                android:afterTextChanged="@{(e) -> viewModel.setValid(ChangePasswordViewModel.STATE_IS_VALID_NEW_PASSWORD)}"

                android:maxLength="20"
                android:maxLines="1"

                android:imeOptions="flagNoExtractUi|actionDone"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            android:hint="@string/confirm_password"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"

            app:counterEnabled="true"
            app:counterMaxLength="20"

            android:textInputLayout_errorEnabledOtherwiseHelperEnabled="@{!viewModel.isValidConfirmPassword()}"

            android:textInputLayout_errorText="@{@string/length_range_must_be_8_20}"

            app:helperText="@string/required_length_range_8_20"

            app:endIconMode="password_toggle"

            app:layout_constraintTop_toBottomOf="@id/newPasswordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                tools:text="example@gmail.com"
                android:text="@={viewModel.confirmPassword}"

                android:afterTextChanged="@{(e) -> viewModel.setValid(ChangePasswordViewModel.STATE_IS_VALID_CONFIRM_PASSWORD)}"

                android:maxLength="20"
                android:maxLines="1"

                android:imeOptions="flagNoExtractUi|actionDone"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"

            android:text="@string/cancel"

            style="@style/ButtonBigTextNoCaps.Outlined"

            android:onClick="@{(v) -> viewModel.onCancelClick(v)}"

            app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/okButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"

            android:text="@string/ok"

            style="@style/ButtonBigTextNoCaps"

            android:onClick="@{(v) -> viewModel.onOkClick(v)}"

            app:layout_constraintTop_toTopOf="@id/cancelButton"
            app:layout_constraintStart_toEndOf="@id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
